test/invalidwiki/Страница без аттачей/__page.opt
[General]
type = text
datetime = 2012-10-17 12:27:36.534000

